2001-11-14  Andreas Jaeger  <aj@suse.de>

	* cpu-i386.c (bfd_x86_64_arch_intel_syntax,bfd_x86_64_arch): Use
	x86-64 for display.

2001-11-14  Jakub Jelinek  <jakub@redhat.com>

	* dwarf2.c (struct line_head) [total_length]: Change type to
	bfd_vma.
	(struct dwarf2_debug): Add dwarf_str_buffer and dwarf_str_size.
	(struct comp_unit): Add stash and offset_size.
	(read_8_bytes): Return bfd_vma.
	(read_indirect_string): New.
	(read_attribute): Handle DW_FORM_strp.
	(decode_line_info): Support 64-bit DWARF format.
	(_bfd_dwarf2_find_nearest_line): Likewise.
	(parse_comp_unit): Set offset_size and stash.

2001-11-13  Keith Walker <keith.walker@arm.com>

	* dwarf2.c (read_attribute_value): New function to handle
	DW_FORM_indirect.
	(read_attribute): Use it.

2001-11-13  Geoffrey Keating  <geoffk@redhat.com>

	* dwarf2.c (decode_line_info): Properly deal with unknown standard
	opcodes.

2001-11-13  John Marshall  <jmarshall@acm.org>
	    Alan Modra  <amodra@bigpond.net.au>

	* section.c (bfd_make_section_anyway): Don't increment section_id
	and the BFD's section_count if adding the section failed.
	* vms.c (vms_new_section_hook): Adjust for bfd_make_section_anyway
	change.

2001-11-12  Orjan Friberg  <orjanf@axis.com>

	* elf32-cris.c (cris_elf_grok_prstatus): Adjust values to match new
	core dump format.

2001-11-11  H.J. Lu <hjl@gnu.org>

	* elf32-mips.c (_bfd_mips_elf_finish_dynamic_sections): Call
	_bfd_elf_strtab_size instead of _bfd_stringtab_size.

	* elf64-sparc.c (sparc64_elf_size_dynamic_sections): Change
	dynstr type to `struct elf_strtab_hash *'.

2001-11-11  Hans-Peter Nilsson  <hp@bitrange.com>

	* elf-strtab.c (_bfd_elf_strtab_finalize): Make first variable i
	size_t.  Rename second i to j.

Sat Nov 10 08:56:02 2001  Jeffrey A Law  (law@cygnus.com)

	* binary.c: Include safe-ctype.h after bfd.h and sysdep.h.

2001-11-10  Alan Modra  <amodra@bigpond.net.au>

	* elf32-arm.h (elf32_arm_final_link_relocate): Don't copy STN_UNDEF
	relocs into shared libs.